...
        android:layout_below="@+id/appNameTextView"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameInput"
        android:hint="name"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/submit"
        android:layout_alignStart="@+id/submit" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
...
